AKS scripting/VIYA4/project/deploy/franceavv/sas-bases/overlays/network/istio/components/sas-workflow-definition-history/resources.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: sas-workflow-definition
spec:
  host: sas-workflow-definition
  trafficPolicy:
    loadBalancer:
      consistentHash:
        httpCookie:
          name: sas-ingress-istio
          path: /workflowDefinition/
          ttl: 0s

---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: sas-workflow-history
spec:
  host: sas-workflow-history
  trafficPolicy:
    loadBalancer:
      consistentHash:
        httpCookie:
          name: sas-ingress-istio
          path: /workflowHistory/
          ttl: 0s

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  annotations:
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-workflow-definition-history
    sas.com/admin: namespace
  name: sas-workflow-definition
spec:
  gateways:
  - public-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        exact: /workflowDefinition
    - uri:
        prefix: /workflowDefinition/
    route:
    - destination:
        host: sas-workflow-definition
    timeout: 300s

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  annotations:
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-workflow-definition-history
    sas.com/admin: namespace
  name: sas-workflow-history
spec:
  gateways:
  - public-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        exact: /workflowHistory
    - uri:
        prefix: /workflowHistory/
    route:
    - destination:
        host: sas-workflow-history
    timeout: 300s
